--- a/src/sections/Navbar/NavBar.css
+++ b/src/sections/Navbar/NavBar.css
@@ -34,12 +34,13 @@
 }
 .navMenu{
     width: 100vw;
+    height: 100vh;
     background-color: var(--white-color);
     display: flex;
     flex-direction: column;
-    position: absolute;
+    position:fixed;
     z-index: 999;
-    transform:  translateY(-200%);
+    transform:  translateX(-200%);
     transition: all 0.6s ease ;
 }
 .navMenu .links{
@@ -59,7 +60,7 @@
 }
 .navMenu.open{
     display: flex;
-    transform: translateY(0);
+    transform: translateX(0vh);
     top: 90px;
 }
 .bg-color{
